--- a/src/app/features/weather-home/weather-home.html
+++ b/src/app/features/weather-home/weather-home.html
@@ -1,1 +1,19 @@
-<p>weather-home works!</p>
+<div class="search">
+  <form #form="ngForm" (submit)="onSubmit()">
+    <input
+      type="text"
+      placeholder="Buscar Localização"
+      name="city"
+      [ngModel]="initialCityName"
+    />
+    <span (click)="onSubmit()"
+      ><fa-icon
+        animation="fade"
+        style="--fa-animation-duration: 0.5s"
+        size="lg"
+        class="search-icon"
+        [icon]="searchIcon"
+      ></fa-icon
+    ></span>
+  </form>
+</div>
