--- a/src/app/features/weather-home/weather-home.html
+++ b/src/app/features/weather-home/weather-home.html
@@ -4,7 +4,7 @@
       type="text"
       placeholder="Buscar Localização"
       name="city"
-      [ngModel]="initialCityName"
+      [(ngModel)]="initialCityName"
     />
     <span (click)="onSubmit()"
       ><fa-icon
@@ -17,3 +17,7 @@
     ></span>
   </form>
 </div>
+<app-weather-card
+  *ngIf="weatherDatas"
+  [weatherDatasInput]="weatherDatas"
+></app-weather-card>
